--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0-dev",
   "main": "dist/vue3-simple-datepicker.common.js",
   "module": "src/main.js",
+  "description": "Simple datepicker compatible with Vue3",
+  "keywords": ["datepicker", "vue3"],
+  "repository": "github:inetsys/vue3-simple-datepicker",
+  "bugs": "https://github.com/inetsys/vue3-simple-datepicker/issues",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve demo/dev.js",
     "build": "vue-cli-service build --target lib --name vue3-simple-datepicker src/main.js",
